<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lange_Nacht</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="strafe_eintragen">Strafe eintragen</string>
    <string name="strafe_anlegen">Neue Strafe anlegen</string>
    <string name="spieler_auswaehlen">Spieler auswählen</string>
    <string name="title_activity_strafe_anlegen">Strafe anlegen</string>
    <string name="title_activity_strafe_eintragen">Strafe eintragen</string>
    <string name="strafe_auswaehlen">Strafe auswählen</string>
    <string name="preis">€</string>
    <string name="title_activity_spieler_auswaehlen">Spieler Auswählen</string>
    <string name="preis_eingeben">Preis eingeben</string>
    <string name="beschreibung_eingeben">Beschreibung eingeben</string>
    <string name="title_activity_spieler_uebersicht">SpielerUebersicht</string>
    <string name="datum_eingeben">Datum eingeben</string>
    <string name="spieler_anlegen">Neuen Spieler anlegen</string>
    <string name="title_activity_spieler_anlegen">SpielerAnlegenActivity</string>
    <string name="nachname">Nachname</string>
    <string name="vorname">Vorname</string>
    <string name="datum_waehlen">Datum auswählen</string>
    <string name="title_activity_spieler_anzeigen">SpielerAnzeigenActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_alle_strafen">AlleStrafenActivity</string>
    <string name="title_activity_offene_strafen">OffeneStrafenActivity</string>
    <string name="title_activity_alle_strafen_fragment">AlleStrafenFragment</string>
    <string name="bezahlt">bezahlt</string>
    <string name="alle_offenen_strafen">Alle Offenen Strafen</string>
    <string name="title_activity_alle_offenen_strafen">AlleOffenenStrafenActivity</string>

</resources>
