<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnStrafeAnlegen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSpielerAuswaehlen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/strafe_anlegen" />

    <Button
        android:id="@+id/btnSpielerAuswaehlen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnStrafeEintragen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/spieler_auswaehlen" />

    <Button
        android:id="@+id/btnSpielerAnlegen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnStrafeAnlegen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/spieler_anlegen" />

    <Button
        android:id="@+id/btnOffeneStrafen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSpielerAnlegen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/alle_offenen_strafen" />

    <Button
        android:id="@+id/btnStrafeEintragen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/strafe_eintragen" />

</RelativeLayout>
