<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StrafeEintragenActivity" >

    <TextView
        android:id="@+id/txtViewStrafeEintragen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/strafe_eintragen"
        android:textSize="@dimen/ueberschrift" />

    <TextView
        android:id="@+id/txtViewSpielerAuswaehlen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtViewStrafeEintragen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/spieler_auswaehlen" />

    <Spinner
        android:id="@+id/spinnerSpieler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtViewSpielerAuswaehlen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/txtViewStrafeAuswaehlen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerSpieler"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/strafe_auswaehlen" />

    <TextView
        android:id="@+id/txtViewPreis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerStrafen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        android:text="@string/preis" />

    <Button
        android:id="@+id/btnStrafeEintragenSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtViewPreis"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/strafe_eintragen" />

    <Spinner
        android:id="@+id/spinnerStrafen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <Button
        android:id="@+id/btnDatumwaehlen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerStrafen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/datum_waehlen" />

</RelativeLayout>